--- a/Code/DirectX.vcxproj
+++ b/Code/DirectX.vcxproj
@@ -100,6 +100,7 @@
     <ClCompile Include="input.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="UI.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="image\ico.ico" />
