--- a/Code/DirectX.vcxproj.filters
+++ b/Code/DirectX.vcxproj.filters
@@ -53,6 +53,9 @@
     <ClCompile Include="DX.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="UI.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Image Include="image\IDI_APPICON">
