--- a/Code/DirectX.vcxproj.filters
+++ b/Code/DirectX.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="Hit.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="Quantitative.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -66,6 +69,9 @@
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="Hit.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="Display.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
